--- a/README.org
+++ b/README.org
@@ -65,7 +65,9 @@ It's like jQuery, but way less useful. Given this example HTML file,
   NODE. If VAL is supplied, destructively set PROP to VAL.
 - ~(elquery-rm-prop NODE)~ - Destructively remove PROP from NODE
 *** Predicates
-- ~(elquery-elp OBJ)~ - Return whether OBJ represents a DOM node
+- ~(elquery-nodep OBJ)~ - Return whether OBJ is a DOM node
+- ~(elquery-elp OBJ)~ - Return whether OBJ is not a text node
+- ~(elquery-textp OBJ)~ - Return whether OBJ is a text node
 *** General Tree Functions
 Because HTML is a large tree representation, elq includes some general tree
 manipulation functions which it uses internally, and may be useful to you when
